styling home page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 html {
-  font-size: 100%;
+   font-size: 100%;
   font-family: 'Source Sans Pro', sans-serif;
+  background: var(--backgroundColor);
+} 
+
+:root {
+  /* colors */
+  --primary-50: #e0fcff;
+  --primary-100: #bef8fd;
+  --primary-200: #87eaf2;
+  --primary-300: #54d1db;
+  --primary-400: #38bec9;
+  --primary-500: #23c1ef;
+  --primary-600: #14919b;
+  --primary-700: #0e7c86;
+  --primary-800: #0a6c74;
+  --primary-900: #044e54;
+
+  /* grey */
+  --grey-50: #f0f4f8;
+  --grey-100: #d9e2ec;
+  --grey-200: #bcccdc;
+  --grey-300: #9fb3c8;
+  --grey-400: #829ab1;
+  --grey-500: #627d98;
+  --grey-600: #486581;
+  --grey-700: #334e68;
+  --grey-800: #243b53;
+  --grey-900: #102a43;
+  /* rest of the colors */
+  --black: #222;
+  --white: #fff;
+  --red-light: #97323b;
+  --red-dark: #bb313d;
+  --green-light: #d1e7dd;
+  --green-dark: #0f5132;
+
+  /* others */
+  --backgroundColor: var(--grey-50);
 }
+
 
